[package]
name = "mock-io"
version = "0.2.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A crate with mock IO stream and listener implementations"
homepage = "https://github.com/devashishdxt/mock-io"
repository = "https://github.com/devashishdxt/mock-io"
categories = ["development-tools::testing", "network-programming"]
keywords = ["mock", "io", "mock-stream", "mockstream"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-channel = { version = "1.5", optional = true }
futures-io = { version = "0.3", optional = true }
pin-project-lite = { version = "0.1", optional = true }
thiserror = "1.0"
tokio = { version = "0.3", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "0.3", features = ["io-util", "macros", "rt-multi-thread"] }

[features]
default = ["sync"]
async-futures = ["async-channel", "futures-io", "pin-project-lite"]
async-tokio = ["pin-project-lite", "tokio"]
doc = []
full = ["async-futures", "async-tokio", "sync"]
sync = []
